# claude-task

./: .gitignore  .gitmodules  .mcp.json  Brewfile  CLAUDE.md  Cargo.toml  Dockerfile  HT_MCP_TROUBLESHOOTING.md  README.md  README_HT_MCP_DEBUG.md  build.rs  debug-container.sh  debug-ht-mcp.sh  docker-bake.hcl  docker-compose.yml  docker-entrypoint.sh  justfile  nginx.conf  run-ht-mcp-with-approval.sh  run-setup.sh  run-with-ht-mcp.sh  test-entrypoint-direct.sh  test-entrypoint-quick.sh  test-entrypoint-run.sh  test-entrypoint.sh  test-ht-mcp.sh  test-simple-container.sh
.claude/: settings.json
.github/workflows/: docker-publish.yml
docker/: Dockerfile  docker-bake.hcl  entrypoint.sh
docker/ht-mcp-release/: .gitkeep
docker/nginx/: ht-mcp-proxy.conf
docs/: HT_MCP_INTEGRATION.md
examples/: mcp.json
examples/local-nginx-test/: README.md  nginx-local.conf  start-nginx.sh
local-test/: README.md  debug-nginx.sh  nginx-local.conf  nginx-simple.conf  start-mcp-inspector.sh  start-nginx.sh  test-simple-nginx.sh
scripts/: default-ht-mcp-prompt.txt  generate_docker_constant.sh  run-with-ht-mcp.sh  test-docker.sh  test-ht-mcp.sh
src/: assets.rs  config.rs  credential_sync.rs  credentials.rs  docker.rs  docker_image.rs  generated_constants.rs  handle_config.rs  kube.rs  lib.rs  main.rs  mcp.rs  permission.rs  worktree.rs
src/assets/: CLAUDE.md
tests/: config.rs  mcp.rs
