[package]
name = "claude-task"
version = "0.1.0"
edition = "2021"
default-run = "claude-task"

[[bin]]
name = "claude-task"
path = "src/main.rs"

[dependencies]
keyring = "2.3"
localauthentication-rs = { git = "https://github.com/caoimhebyrne/localauthentication-rs.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
bollard = "0.17"
tar = "0.4"
futures-util = "0.3"