[package]
name = "claude-task"
version = "0.1.0"
edition = "2021"
default-run = "claude-task"

[[bin]]
name = "claude-task"
path = "src/main.rs"

[dependencies]
keyring = "2.3"  # Keep for cross-platform support (Windows, Linux)
localauthentication-rs = { git = "https://github.com/caoimhebyrne/localauthentication-rs.git" }
security-framework = "2.9"  # Native macOS Security framework for proper keychain access
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive", "env"] }
regex = "1.0"
bollard = "0.17"
tar = "0.4"
futures-util = "0.3"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "0.8"
dialoguer = "0.11"
dirs = "6.0.0"
hostname = "0.4"
sha2 = "0.10"
kube = { version = "0.87.0", features = ["runtime", "client"] }
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
rand = "0.9.1"
futures = "0.3.31"
base64 = "0.22.1"

[build-dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
quote = "1.0"

[dev-dependencies]
tempfile = "3.20.0"
futures-util = "0.3"
